Sharing data prep notebook

--- a/Six Degrees of CFB Data Prep.ipynb
+++ b/Six Degrees of CFB Data Prep.ipynb
@@ -1188,9 +1188,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#create variables need for melt (de-pivoting of data)\n",
+    "#create variables needed for melt (de-pivoting of data)\n",
     "id_vars = ['Current Head Coaches']\n",
-    "value_vars = df[df.drop('Current Head Coaches', axis = 1).columns] #list of all columns but \"Current Head Coaches\"; easier this way rather than listingevery column name\n",
+    "value_vars = df[df.drop('Current Head Coaches', axis = 1).columns] #list of all columns but 'Current Head Coaches'\n",
     "var_name = 'year'\n",
     "value_name = 'team'"
    ]
@@ -2475,7 +2475,7 @@
    ],
    "source": [
     "#create another column combining the year and team into a single variable\n",
-    "#this allows us to easily distinguish between different versions of the same team when we make the graph\n",
+    "#this allows us to easily distinguish between different iterations of the same team when we create the network\n",
     "df['squad'] = df['year'].apply(str) + ' '+ df['team']\n",
     "df"
    ]
